# TuiTrack-

./: .env.example  .gitignore  Cargo.toml  README.md
src/: binance.rs  formatting.rs  main.rs  models.rs  security.rs  storage.rs
src/app/: accessors.rs  actions.rs  binance_actions.rs  binance_mutations.rs  messages.rs  metrics.rs  mod.rs  mutations.rs  navigation_actions.rs  reset_actions.rs  reset_mutations.rs  secret_actions.rs  secret_metrics.rs  secret_mutations.rs  target_actions.rs  work_actions.rs  work_metrics.rs  work_mutations.rs
src/state/: forms.rs  mod.rs  navigation.rs  notes.rs  targets.rs  work.rs
src/ui/: balance_form.rs  binance_footer.rs  binance_header.rs  binance_panels.rs  celebration.rs  charts.rs  footer.rs  forms.rs  header.rs  inspector.rs  language_selector.rs  mod.rs  reset_modal.rs  secret_footer.rs  secret_form.rs  secret_header.rs  secret_panels.rs  sidebar.rs  table.rs  target_delete_modal.rs  target_form.rs  theme.rs  theme_selector.rs  work_charts.rs  work_delete_animation.rs  work_footer.rs  work_form.rs  work_header.rs  work_inspector.rs  work_sidebar.rs  work_table.rs
src/ui/home/: deck.rs  hero.rs  mod.rs  util.rs
